# tp_per_fast

./: .env.sample  .gitignore  Cargo.toml  build.rs  flake.nix
protodef/: Cargo.toml  build.rs
protodef/src/: lib.rs
src/: binary_search.rs  main.rs  reader_thread.rs  stattrack.rs  tree.rs  visualizer.rs
src/geo_to_bezirk/: binary_search.rs  mod.rs  naive_linear.rs  rtree.rs
