[package]
name = "tp_per_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = {version = "0.29.0", features = ["socket"]}

signal-hook = "0.3.17"
geo = "0.28.0"
wkt = "0.11"
rstar = "0.12.0"
petgraph = "0.6.5"
image = "0.25.4"
imageproc = "0.25.0"
svg = "0.18.0"
dotenv = "0.15.0"
protodef = {path = "./protodef"}

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "visualizer"
path = "src/visualizer.rs"

[[bin]]
name = "tree"
path = "src/tree.rs"


[build-dependencies]
