[package]
name = "tp_per_fast"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "protodef",
    "bin",
]

[[bin]]
name = "server"
path = "bin/src/main.rs"

[[bin]]
name = "visualizer"
path = "bin/src/visualizer.rs"

[[bin]]
name = "tree"
path = "bin/src/tree.rs"

[lib]
name = "protodefs"
path = "protodef/src/lib.rs"

[dependencies]
nix = {version = "0.29.0", features = ["socket"]}

geo = "0.28.0"
wkt = "0.11"
rstar = "0.12.0"
petgraph = "0.6.5"
svg = "0.18.0"
dotenv = "0.15.0"
prost = "0.13.3"


[build-dependencies]
prost-build = "0.13.3"
dotenv = "0.15.0"
prost = "0.13.3"